--- a/flask-course/requirements.txt
+++ b/flask-course/requirements.txt
@@ -1,8 +1,11 @@
-# ./venv/bin/pip3 freeze > requirements.txt
 click==7.1.2
 Flask==1.1.2
+Flask-Env==2.0.0
+Flask-SQLAlchemy==2.4.3
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
 pkg-resources==0.0.0
+python-dotenv==0.13.0
+SQLAlchemy==1.3.17
 Werkzeug==1.0.1
